maintenance/tidying up pages

--- a/CompareList/compare.html
+++ b/CompareList/compare.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+
     <!--creates search bar form-->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!--makes navbar dark and controls spacing of items-->
@@ -90,43 +91,8 @@
         </form>
     </div>
 
-    <div class="title" id="homeTitle"><h1>Welcome to <b>Shops 'R' Us</b></h1></div>
+    <div class="title"><h1>Your Account</h1></div>
 
-    <!--creates carousel-->
-    <div class="container mt-3">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slideshow -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <!--location of specific image with description for accessibility purposes and sizes-->
-                    <img src="../images/mountain1.jpg" alt="Lake" width="550" height="250">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/mountain2.jpg" alt="Canyon" width="550" height="250">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/mountain3.jpg" alt="Alps" width="550" height="250">
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
-
-    </div>
-    
     <!--defines footer-->
     <div id="footer">
         <footer>This is the footer</footer>
