--- a/Hot Deals/deals.html
+++ b/Hot Deals/deals.html
@@ -91,6 +91,7 @@
         </form>
     </div>
 
+    <div class="title"><h1>Hot Deals</h1></div>
     <!--defines footer-->
     <div id="footer">
         <footer>This is the footer</footer>
