--- a/Login/myaccount.html
+++ b/Login/myaccount.html
@@ -91,6 +91,13 @@
         </form>
     </div>
 
+    <div class="title"><h1>Your Account</h1></div>
+    <div>
+        <a href="../WatchList/watch.html">Your Watchlist</a>
+    </div>
+    <div>
+        <a href="../CompareList/compare.html">Your Watchlist</a>
+    </div>
     <!--defines footer-->
     <div id="footer">
         <footer>This is the footer</footer>
