--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -78,20 +78,28 @@
     <div id="login" class="container">
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
             <!--defines type of input, id, placeholder and requires user to make input-->
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
         </div>
         <div class="form-group">
             <label for="key">Password:</label>
-            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
             <!--defines type of input, id, placeholder and requires user to make input-->
+            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
         </div>
-        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         <!--submit button-->
+        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
+    <div class="title"><h1>Contact Us</h1></div>
     <div id="contact">
+        <p>Contact us by emailing:<br/>
+            <!-- opens email draft in user's email client with subject -->
+            <a href="mailto:shopping@store.com?Subject=Enquiry" target="_top">shopping@store.com</a>
+        </p>
+        <p>Or by popping into one of our stores<br/>
+            <a href="../Map/EventList/EventList.html">Find a store</a>
+        </p>
 
     </div>
     <!--defines footer-->
