--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -94,7 +94,7 @@
         </form>
     </div>
 
-    <h1>Event List</h1>
+    <div class="title"><h1>Find Your Nearest Store</h1></div>
 
     <!--placeholder for Google Map, javascript loads map-->
     <div id="mapInput" style="width: 650px; height: 300px;"></div>
