--- a/CatTemplate/catTemplate.html
+++ b/CatTemplate/catTemplate.html
@@ -114,6 +114,7 @@
     <script src="../js/ListFunc/ListItems.js"></script>
     <script src="../js/ListFunc/ListItemsDAO.js"></script>
     <script src="../js/ListCat/listCat.js"></script>
+    <script src="../js/AddCompare/addCompare.js"></script>
     
 
     <!--defines footer-->
