--- a/CompareList/compare.html
+++ b/CompareList/compare.html
@@ -19,9 +19,8 @@
     <script src="../js/main.js"></script>
     <script src="../js/lib/indexeddb.js"></script>
 
-
-    <title>Catalogue Website</title>
     <!--title of site-->
+    <title>Catalogue Website</title>
 
 </head>
 
@@ -91,7 +90,7 @@
         </form>
     </div>
 
-    <div class="title"><h1>Your Account</h1></div>
+    <div class="title"><h1>Compare</h1></div>
 
     <!--defines footer-->
     <div id="footer">
