--- a/Login/myaccount.html
+++ b/Login/myaccount.html
@@ -96,7 +96,7 @@
         <a href="../WatchList/watch.html">Your Watchlist</a>
     </div>
     <div>
-        <a href="../CompareList/compare.html">Your Watchlist</a>
+        <a href="../CompareList/compare.html">Your Comparisons</a>
     </div>
     <!--defines footer-->
     <div id="footer">
