--- a/CompareList/compare.html
+++ b/CompareList/compare.html
@@ -20,7 +20,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
     <!--title of site-->
-    <title>Catalogue Website</title>
+    <title>Catalogue Website Compare</title>
 
 </head>
 
