--- a/Hot Deals/deals.html
+++ b/Hot Deals/deals.html
@@ -19,9 +19,8 @@
     <script src="../js/main.js"></script>
     <script src="../js/lib/indexeddb.js"></script>
 
-
-    <title>Catalogue Website</title>
     <!--title of site-->
+    <title>Catalogue Website Hot Deals</title>
 
 </head>
 
@@ -92,6 +91,7 @@
     </div>
 
     <div class="title"><h1>Hot Deals</h1></div>
+    
     <!--defines footer-->
     <div id="footer">
         <footer>This is the footer</footer>
