--- a/Login/myaccount.html
+++ b/Login/myaccount.html
@@ -19,9 +19,8 @@
     <script src="../js/main.js"></script>
     <script src="../js/lib/indexeddb.js"></script>
 
-
-    <title>Catalogue Website</title>
     <!--title of site-->
+    <title>Catalogue Website My Account</title>
 
 </head>
 
