--- a/Search/results.html
+++ b/Search/results.html
@@ -20,7 +20,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
 
-    <title>Catalogue Website</title>
+    <title>Catalogue Website Search Results</title>
     <!--title of site-->
 
 </head>
