--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -20,7 +20,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
 
-    <title>Catalogue Website</title>
+    <title>Catalogue Website Contact</title>
     <!--title of site-->
 
 </head>
