--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -23,7 +23,7 @@
     <script src="../../js/main.js"></script>
     <script src="../../js/lib/indexeddb.js"></script>
 
-    <title>Catalogue Website - Insert Map Event</title>
+    <title>Catalogue Website Store Locator</title>
     <!--title of site-->
 
 </head>
