--- a/Update/Update.html
+++ b/Update/Update.html
@@ -22,7 +22,7 @@
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
   crossorigin="anonymous"></script> -->
 
-  <title>Catalogue Website</title>
+  <title>Catalogue Website Update Item</title>
   <!--title of site-->
 
 </head>
