--- a/WatchList/watch.html
+++ b/WatchList/watch.html
@@ -20,7 +20,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
 
-    <title>Catalogue Website</title>
+    <title>Catalogue Website Watchlist</title>
     <!--title of site-->
 
 </head>
