--- a/Login/crud.html
+++ b/Login/crud.html
@@ -220,6 +220,12 @@
             console.log("selcat was clicked value:" + value)
             //return false;
         });
+
+        // $("#btnAddCat").click(function (event) {
+        //     event.preventDefault();
+            
+        //     return true;
+        // });
     </script>
 
 </body>
