--- a/Login/crud.html
+++ b/Login/crud.html
@@ -199,6 +199,7 @@
     <script src="../js/ListFunc/ListItemsDAO.js"></script>
     <script src="../js/AddCat/AddCategory.js"></script>
     <script src="../js/ListCat/adminCatList.js"></script>
+    <script src="../js/ListCat/listCat.js"></script>
     <script src="../js/accordian.js"></script>
 
 
@@ -211,15 +212,10 @@
         $("#AdminDrop").change(function (event) {
             //event.preventDefault();
             var value = $(this).val();
-            console.log("selcat was clicked value:" + value)
+            console.log("selCat was clicked value:" + value)
             //return false;
         });
 
-        // $("#btnAddCat").click(function (event) {
-        //     event.preventDefault();
-            
-        //     return true;
-        // });
     </script>
 
 </body>
