map update/delete function implemented

--- a/Login/crud.html
+++ b/Login/crud.html
@@ -172,6 +172,9 @@
                 <script src="../Map/InsertEventDAO.js"></script>
             </form>
         </div>
+        <div id="markerList">
+            <h2>Store Markers List</h2>
+        </div>
     </div>
 
     <div class="title"><h2>Update And Delete Controls</h2></div>
